# ioc_finder

./: .flake8  README.md  ioc_finder.py  pyproject.toml  requirements.txt
iocs/: known_iocs.txt
results/: RED-COBRA_20200911-071320.csv
