[tool.poetry]
name = "ioc_finder"
version = "0.1.4"
description = "Quick and dirty method to search for filenames that match IOCs if hashes are not yet available"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.5"
tqdm = "^4.66.3"
rich = "^13.3.4"

[tool.poetry.extras]
lint = [ "pylint",]

[tool.poetry.dependencies.pylint]
version = "*"
optional = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
